# live-translate

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: backend-ci.yml  ci.yml  frontend-ci.yml
backend/: .env.example  .gitignore  Cargo.toml
backend/src/: audio.rs  main.rs  server.rs  transcriber.rs  whisper_stt.rs
docker/: .dockerignore  backend.Dockerfile
frontend/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/src/app/: globals.css  page.test.tsx  page.tsx
frontend/src/components/: SetupDialog.tsx  TranslationView.tsx
frontend/src/tests/: page.test.tsx  subtitle-latency.test.tsx
reports/: 25Mar_audio-capture.md  26Mar_stt&translation.md  27Mar_frontend-integration.md  31Mar_file-translation-synced-subtitles.md
