[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }

http = "1.0"

# (Cross-platform audio I/O)
cpal = "0.15"

anyhow = "1.0"

log = "0.4"
env_logger = "0.10"

tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
dotenvy = "0.15"